--- a/log4net.config
+++ b/log4net.config
@@ -12,7 +12,7 @@
     </layout>
   </appender>
   <appender name="file" type="log4net.Appender.RollingFileAppender">
-    <file value="logs\DirectoryMonitor.log" />
+    <file value="logs\package-loader.log" />
     <appendToFile value="true" />
     <rollingStyle value="Date" />
     <maxSizeRollBackups value="5" />
